--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
-  "name": "restaurant_page",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Matt-Daniaux/restaurant_page.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Matt-Daniaux/restaurant_page/issues"
-  },
-  "homepage": "https://github.com/Matt-Daniaux/restaurant_page#readme",
-  "devDependencies": {
-    "webpack": "^5.76.1",
-    "webpack-cli": "^5.0.1"
-  }
+    "name": "restaurant_page",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "webpack",
+        "watch": "webpack --watch"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Matt-Daniaux/restaurant_page.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Matt-Daniaux/restaurant_page/issues"
+    },
+    "homepage": "https://github.com/Matt-Daniaux/restaurant_page#readme",
+    "devDependencies": {
+        "eslint": "^8.36.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-prettier": "^8.7.0",
+        "eslint-plugin-import": "^2.27.5",
+        "prettier": "2.8.4",
+        "webpack": "^5.76.1",
+        "webpack-cli": "^5.0.1"
+    }
 }
