--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     },
     "homepage": "https://github.com/Matt-Daniaux/restaurant_page#readme",
     "devDependencies": {
+        "css-loader": "^6.7.3",
         "eslint": "^8.36.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^8.7.0",
         "eslint-plugin-import": "^2.27.5",
+        "html-webpack-plugin": "^5.5.0",
         "prettier": "2.8.4",
+        "style-loader": "^3.3.2",
         "webpack": "^5.76.1",
         "webpack-cli": "^5.0.1"
     }
